--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,6 @@
 platform = atmelavr
 board = nanoatmega328
 framework = arduino
-lib_deps = marcoschwartz/LiquidCrystal_I2C@^1.1.4
+lib_deps = 
+	marcoschwartz/LiquidCrystal_I2C@^1.1.4
+	arduino-libraries/SD@^1.2.4
